--- a/index.html
+++ b/index.html
@@ -133,22 +133,22 @@
               <div data-aos="zoom-in-left" class="box">
                 <img src="./images/icon_features.svg" alt="ICON" />
                 <h3>10 سنوات</h3>
-                <p>السنوات اكثر من 10 سنوات</p>
+                <p>خبرة أكثر من 10 سنوات في مجال النباتات</p>
               </div>
               <div data-aos="zoom-in" class="box">
                 <img src="./images/icon_features.svg" alt="ICON" />
                 <h3>+ 250 الف</h3>
-                <p>عدد الشتلات بالمشتل اكثر من 250 الف</p>
+                <p>أكثر من 250 الف شتلة في المشتل</p>
               </div>
               <div data-aos="zoom-in" class="box">
                 <img src="./images/icon_features.svg" alt="ICON" />
                 <h3>+ مليون</h3>
-                <p>المباعه تجاوز المليون</p>
+                <p>أكثر من مليون شتلة مباعة</p>
               </div>
               <div data-aos="zoom-in-right" class="box">
                 <img src="./images/icon_features.svg" alt="ICON" />
                 <h3>+ 5000 شجرة</h3>
-                <p>الزيتون بعنا اكثر من 5000 شجرة زيتون</p>
+                <p>أكثر من 5000 شجرة زيتون مباعة</p>
               </div>
             </div>
           </div>
